deploy: 157f22edfef8aabef62d12fcad2a14e3a375c805

--- a/annotated.html
+++ b/annotated.html
@@ -77,6 +77,12 @@
                   <li class="m-doc-collapsible collapsed">
                     <a href="#" onclick="return toggle(this)">namespace</a> <a href="namespacelsplex_1_1jsonrpc_1_1pal.html" class="m-doc">pal</a> <span class="m-doc"><span></span></span>
                     <ul class="m-doc">
+                      <li class="m-doc-collapsible collapsed">
+                        <a href="#" onclick="return toggle(this)">namespace</a> <a href="namespacelsplex_1_1jsonrpc_1_1pal_1_1detail.html" class="m-doc">detail</a> <span class="m-doc"><span></span></span>
+                        <ul class="m-doc">
+                          <li>class <a href="classlsplex_1_1jsonrpc_1_1pal_1_1detail_1_1fd.html" class="m-doc">fd</a> <span class="m-doc"><span></span></span></li>
+                        </ul>
+                      </li>
                       <li>struct <a href="structlsplex_1_1jsonrpc_1_1pal_1_1asio__stdin.html" class="m-doc">asio_stdin</a> <span class="m-doc"><span></span></span></li>
                       <li>struct <a href="structlsplex_1_1jsonrpc_1_1pal_1_1asio__stdout.html" class="m-doc">asio_stdout</a> <span class="m-doc"><span></span></span></li>
                       <li>struct <a href="structlsplex_1_1jsonrpc_1_1pal_1_1readable__file.html" class="m-doc">readable_file</a> <span class="m-doc"><span></span></span></li>
