--- a/namespaces.html
+++ b/namespaces.html
@@ -63,7 +63,12 @@
                 <a href="#" onclick="return toggle(this)">namespace</a> <a href="namespacelsplex_1_1jsonrpc.html" class="m-doc">jsonrpc</a> <span class="m-doc"><span></span></span>
                 <ul class="m-doc">
                   <li>namespace <a href="namespacelsplex_1_1jsonrpc_1_1detail.html" class="m-doc">detail</a> <span class="m-doc"><span></span></span></li>
-                  <li>namespace <a href="namespacelsplex_1_1jsonrpc_1_1pal.html" class="m-doc">pal</a> <span class="m-doc"><span></span></span></li>
+                  <li class="m-doc-collapsible">
+                    <a href="#" onclick="return toggle(this)">namespace</a> <a href="namespacelsplex_1_1jsonrpc_1_1pal.html" class="m-doc">pal</a> <span class="m-doc"><span></span></span>
+                    <ul class="m-doc">
+                      <li>namespace <a href="namespacelsplex_1_1jsonrpc_1_1pal_1_1detail.html" class="m-doc">detail</a> <span class="m-doc"><span></span></span></li>
+                    </ul>
+                  </li>
                 </ul>
               </li>
             </ul>
