--- a/pal__posix_8h.html
+++ b/pal__posix_8h.html
@@ -73,11 +73,17 @@
             <dd><span></span></dd>
             <dt>namespace <a href="namespacelsplex_1_1jsonrpc_1_1pal.html" class="m-doc">lsplex::jsonrpc::pal</a></dt>
             <dd><span></span></dd>
+            <dt>namespace <a href="namespacelsplex_1_1jsonrpc_1_1pal_1_1detail.html" class="m-doc">lsplex::jsonrpc::pal::detail</a></dt>
+            <dd><span></span></dd>
           </dl>
         </section>
         <section id="nested-classes">
           <h2><a href="#nested-classes">Classes</a></h2>
           <dl class="m-doc">
+            <dt>
+              class <a href="classlsplex_1_1jsonrpc_1_1pal_1_1detail_1_1fd.html" class="m-doc">lsplex::jsonrpc::pal::detail::fd</a>
+            </dt>
+            <dd><span></span></dd>
             <dt>
               struct <a href="structlsplex_1_1jsonrpc_1_1pal_1_1readable__file.html" class="m-doc">lsplex::jsonrpc::pal::readable_file</a>
             </dt>
