--- a/structlsplex_1_1jsonrpc_1_1pal_1_1asio__stdout.html
+++ b/structlsplex_1_1jsonrpc_1_1pal_1_1asio__stdout.html
@@ -69,7 +69,7 @@
           <dl class="m-doc">
             <dt id="a3ba6a48b17280636217ab8eec45e3f84">
               <div class="m-doc-template">template&lt;typename Executor&gt;</div>
-              <span class="m-doc-wrap-bumper"><a href="#a3ba6a48b17280636217ab8eec45e3f84" class="m-doc-self">asio_stdout</a>(</span><span class="m-doc-wrap">Executor&amp;&amp; ex)</span>
+              <span class="m-doc-wrap-bumper"><a href="#a3ba6a48b17280636217ab8eec45e3f84" class="m-doc-self">asio_stdout</a>(</span><span class="m-doc-wrap">Executor&amp;&amp; ex) <span class="m-label m-flat m-info">explicit</span> </span>
             </dt>
             <dd><span></span></dd>
             <dt>
