--- a/classlsplex_1_1jsonrpc_1_1pal_1_1detail_1_1fd.html
+++ b/classlsplex_1_1jsonrpc_1_1pal_1_1detail_1_1fd.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>lsplex::jsonrpc::pal namespace | LsPlex</title>
+  <title>lsplex::jsonrpc::pal::detail::fd class | LsPlex</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,600,600i%7CSource+Code+Pro:400,400i,600" />
   <link rel="stylesheet" href="m-dark+documentation.compiled.css" />
   <link rel="icon" href="favicon-dark.png" type="image/png" />
@@ -49,7 +49,8 @@
     <div class="m-row">
       <div class="m-col-l-10 m-push-l-1">
         <h1>
-          <span class="m-breadcrumb"><a href="namespacelsplex.html">lsplex</a>::<wbr/></span><span class="m-breadcrumb"><a href="namespacelsplex_1_1jsonrpc.html">jsonrpc</a>::<wbr/></span>pal <span class="m-thin">namespace</span>
+          <span class="m-breadcrumb"><a href="namespacelsplex.html">lsplex</a>::<wbr/></span><span class="m-breadcrumb"><a href="namespacelsplex_1_1jsonrpc.html">jsonrpc</a>::<wbr/></span><span class="m-breadcrumb"><a href="namespacelsplex_1_1jsonrpc_1_1pal.html">pal</a>::<wbr/></span><span class="m-breadcrumb"><a href="namespacelsplex_1_1jsonrpc_1_1pal_1_1detail.html">detail</a>::<wbr/></span>fd <span class="m-thin">class</span>
+          <div class="m-doc-include m-code m-inverted m-text-right"><span class="cp">#include</span> <a class="cpf" href="pal__posix_8h.html">&lt;jsonrpc/pal/pal_posix.h&gt;</a></div>
         </h1>
         <p><span></span></p>
         <nav class="m-block m-default">
@@ -58,32 +59,46 @@
             <li>
               Reference
               <ul>
-                <li><a href="#namespaces">Namespaces</a></li>
-                <li><a href="#nested-classes">Classes</a></li>
+                <li><a href="#typeless-methods">Constructors, destructors, conversion operators</a></li>
+                <li><a href="#pub-methods">Public functions</a></li>
               </ul>
             </li>
           </ul>
         </nav>
-        <section id="namespaces">
-          <h2><a href="#namespaces">Namespaces</a></h2>
+        <section id="typeless-methods">
+          <h2><a href="#typeless-methods">Constructors, destructors, conversion operators</a></h2>
           <dl class="m-doc">
-            <dt>namespace <a href="namespacelsplex_1_1jsonrpc_1_1pal_1_1detail.html" class="m-doc">detail</a></dt>
+            <dt id="a2df1e18e18835fbe07ec38ccc49a4914">
+              <span class="m-doc-wrap-bumper"><a href="#a2df1e18e18835fbe07ec38ccc49a4914" class="m-doc-self">fd</a>(</span><span class="m-doc-wrap">int des) <span class="m-label m-flat m-info">explicit</span> </span>
+            </dt>
+            <dd><span></span></dd>
+            <dt id="ac815ff78a012485b980fc331841b22e7">
+              <span class="m-doc-wrap-bumper"><a href="#ac815ff78a012485b980fc331841b22e7" class="m-doc-self">fd</a>(</span><span class="m-doc-wrap">const <a href="classlsplex_1_1jsonrpc_1_1pal_1_1detail_1_1fd.html" class="m-doc">fd</a>&amp; other) <span class="m-label m-flat m-danger">deleted</span></span>
+            </dt>
+            <dd><span></span></dd>
+            <dt id="abbb1c6156c83610342d1cf921ce7b43e">
+              <span class="m-doc-wrap-bumper"><a href="#abbb1c6156c83610342d1cf921ce7b43e" class="m-doc-self">fd</a>(</span><span class="m-doc-wrap"><a href="classlsplex_1_1jsonrpc_1_1pal_1_1detail_1_1fd.html" class="m-doc">fd</a>&amp;&amp; other) <span class="m-label m-flat m-success">noexcept</span></span>
+            </dt>
+            <dd><span></span></dd>
+            <dt id="a8f94419ef4b8cc93c078615b9b5f200e">
+              <span class="m-doc-wrap-bumper"><a href="#a8f94419ef4b8cc93c078615b9b5f200e" class="m-doc-self">~fd</a>(</span><span class="m-doc-wrap">)</span>
+            </dt>
+            <dd><span></span></dd>
+            <dt id="a3ed9776014f252fba3c02dae391d4e6d">
+              <span class="m-doc-wrap-bumper"><a href="#a3ed9776014f252fba3c02dae391d4e6d" class="m-doc-self">operator int</a>(</span><span class="m-doc-wrap">) const</span>
+            </dt>
             <dd><span></span></dd>
           </dl>
         </section>
-        <section id="nested-classes">
-          <h2><a href="#nested-classes">Classes</a></h2>
+        <section id="pub-methods">
+          <h2><a href="#pub-methods">Public functions</a></h2>
           <dl class="m-doc">
-            <dt>
-              struct <a href="structlsplex_1_1jsonrpc_1_1pal_1_1readable__file.html" class="m-doc">readable_file</a>
+            <dt id="aeff666cad17d235714c5f52955a5db2e">
+              <span class="m-doc-wrap-bumper">auto <a href="#aeff666cad17d235714c5f52955a5db2e" class="m-doc-self">operator=</a>(</span><span class="m-doc-wrap">const <a href="classlsplex_1_1jsonrpc_1_1pal_1_1detail_1_1fd.html" class="m-doc">fd</a>&amp; other) -&gt; <a href="classlsplex_1_1jsonrpc_1_1pal_1_1detail_1_1fd.html" class="m-doc">fd</a>&amp; <span class="m-label m-flat m-danger">deleted</span></span>
             </dt>
             <dd><span></span></dd>
-            <dt>
-              struct <a href="structlsplex_1_1jsonrpc_1_1pal_1_1asio__stdin.html" class="m-doc">asio_stdin</a>
-            </dt>
-            <dd><span></span></dd>
-            <dt>
-              struct <a href="structlsplex_1_1jsonrpc_1_1pal_1_1asio__stdout.html" class="m-doc">asio_stdout</a>
+            <dt id="ada2b26ca20faf7cf0deb30e2903e9c54">
+              <span class="m-doc-wrap-bumper">auto <a href="#ada2b26ca20faf7cf0deb30e2903e9c54" class="m-doc-self">operator=</a>(</span><span class="m-doc-wrap"><a href="classlsplex_1_1jsonrpc_1_1pal_1_1detail_1_1fd.html" class="m-doc">fd</a>&amp;&amp; other) -&gt; <a href="classlsplex_1_1jsonrpc_1_1pal_1_1detail_1_1fd.html" class="m-doc">fd</a>&amp; <span class="m-label m-flat m-success">noexcept</span></span>
             </dt>
             <dd><span></span></dd>
           </dl>
