--- a/namespacelsplex_1_1jsonrpc_1_1pal_1_1detail.html
+++ b/namespacelsplex_1_1jsonrpc_1_1pal_1_1detail.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>lsplex::jsonrpc::pal namespace | LsPlex</title>
+  <title>lsplex::jsonrpc::pal::detail namespace | LsPlex</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,600,600i%7CSource+Code+Pro:400,400i,600" />
   <link rel="stylesheet" href="m-dark+documentation.compiled.css" />
   <link rel="icon" href="favicon-dark.png" type="image/png" />
@@ -49,7 +49,7 @@
     <div class="m-row">
       <div class="m-col-l-10 m-push-l-1">
         <h1>
-          <span class="m-breadcrumb"><a href="namespacelsplex.html">lsplex</a>::<wbr/></span><span class="m-breadcrumb"><a href="namespacelsplex_1_1jsonrpc.html">jsonrpc</a>::<wbr/></span>pal <span class="m-thin">namespace</span>
+          <span class="m-breadcrumb"><a href="namespacelsplex.html">lsplex</a>::<wbr/></span><span class="m-breadcrumb"><a href="namespacelsplex_1_1jsonrpc.html">jsonrpc</a>::<wbr/></span><span class="m-breadcrumb"><a href="namespacelsplex_1_1jsonrpc_1_1pal.html">pal</a>::<wbr/></span>detail <span class="m-thin">namespace</span>
         </h1>
         <p><span></span></p>
         <nav class="m-block m-default">
@@ -58,35 +58,39 @@
             <li>
               Reference
               <ul>
-                <li><a href="#namespaces">Namespaces</a></li>
                 <li><a href="#nested-classes">Classes</a></li>
+                <li><a href="#func-members">Functions</a></li>
               </ul>
             </li>
           </ul>
         </nav>
-        <section id="namespaces">
-          <h2><a href="#namespaces">Namespaces</a></h2>
-          <dl class="m-doc">
-            <dt>namespace <a href="namespacelsplex_1_1jsonrpc_1_1pal_1_1detail.html" class="m-doc">detail</a></dt>
-            <dd><span></span></dd>
-          </dl>
-        </section>
         <section id="nested-classes">
           <h2><a href="#nested-classes">Classes</a></h2>
           <dl class="m-doc">
             <dt>
-              struct <a href="structlsplex_1_1jsonrpc_1_1pal_1_1readable__file.html" class="m-doc">readable_file</a>
-            </dt>
-            <dd><span></span></dd>
-            <dt>
-              struct <a href="structlsplex_1_1jsonrpc_1_1pal_1_1asio__stdin.html" class="m-doc">asio_stdin</a>
-            </dt>
-            <dd><span></span></dd>
-            <dt>
-              struct <a href="structlsplex_1_1jsonrpc_1_1pal_1_1asio__stdout.html" class="m-doc">asio_stdout</a>
+              class <a href="classlsplex_1_1jsonrpc_1_1pal_1_1detail_1_1fd.html" class="m-doc">fd</a>
             </dt>
             <dd><span></span></dd>
           </dl>
+        </section>
+        <section id="func-members">
+          <h2><a href="#func-members">Functions</a></h2>
+          <dl class="m-doc">
+            <dt>
+              <span class="m-doc-wrap-bumper">auto <a href="#a72fe053cd7acf6ff412ba8b577237f35" class="m-doc">get_error_msg</a>(</span><span class="m-doc-wrap">const std::string&amp; msg) -&gt; std::string</span>
+            </dt>
+            <dd><span></span></dd>
+          </dl>
+        </section>
+        <section>
+          <h2>Function documentation</h2>
+          <section class="m-doc-details" id="a72fe053cd7acf6ff412ba8b577237f35"><div>
+            <h3>
+              <span class="m-doc-wrap-bumper">std::string lsplex::<wbr />jsonrpc::<wbr />pal::<wbr />detail::<wbr /></span><span class="m-doc-wrap"><span class="m-doc-wrap-bumper"><a href="#a72fe053cd7acf6ff412ba8b577237f35" class="m-doc-self">get_error_msg</a>(</span><span class="m-doc-wrap">const std::string&amp; msg)</span></span>
+              <div class="m-doc-include m-code m-inverted m-text-right"><span class="cp">#include</span> <a class="cpf" href="pal__posix_8h.html">&lt;jsonrpc/pal/pal_posix.h&gt;</a></div>
+            </h3>
+            <p><span></span></p>
+          </div></section>
         </section>
       </div>
     </div>
