--- a/structlsplex_1_1jsonrpc_1_1pal_1_1asio__stdin.html
+++ b/structlsplex_1_1jsonrpc_1_1pal_1_1asio__stdin.html
@@ -69,7 +69,7 @@
           <dl class="m-doc">
             <dt id="a5376fdf73fbb885b8ae77eca254019ab">
               <div class="m-doc-template">template&lt;typename Executor&gt;</div>
-              <span class="m-doc-wrap-bumper"><a href="#a5376fdf73fbb885b8ae77eca254019ab" class="m-doc-self">asio_stdin</a>(</span><span class="m-doc-wrap">Executor&amp;&amp; ex)</span>
+              <span class="m-doc-wrap-bumper"><a href="#a5376fdf73fbb885b8ae77eca254019ab" class="m-doc-self">asio_stdin</a>(</span><span class="m-doc-wrap">Executor&amp;&amp; ex) <span class="m-label m-flat m-info">explicit</span> </span>
             </dt>
             <dd><span></span></dd>
             <dt>
